--- a/pages/cardinal/events.html
+++ b/pages/cardinal/events.html
@@ -74,7 +74,7 @@
 
 
         <psk-description>
-         The event is dispatched using <code>elem.dispatchEvent(event)</code> to the specified target. In the following code snippet <code>PskButtonEvent</code> is used in <psk-link page="web-components/psk-button">psk-button</psk-link> to trigger an event.
+         The event is dispatched using <code>elem.dispatchEvent(event)</code> to the specified target. In the following code snippet <code>PskButtonEvent</code> is used in <webc-link tag="psk-button">psk-button</webc-link> to trigger an event.
         </psk-description>
         <psk-code language="JavaScript">
             let pskButtonEvent = new PskButtonEvent(this.eventName, this.eventData, {
@@ -114,7 +114,7 @@
             needRoutes | DefaultApplicationController | psk-app-root
             needMenuItems | DefaultApplicationController | app-menu
             getUserInfo | DefaultApplicationController | psk-user-profile
-            validateUrl | DefaultApplicationController | psk-link
+            validateUrl | DefaultApplicationController | webc-link
         </psk-table>
     </psk-chapter>
 
