--- a/pages/cardinal/themes.html
+++ b/pages/cardinal/themes.html
@@ -146,18 +146,18 @@
         Based on the <code>image_container</code>, <code>image_wrapper</code>, <code>image_description</code> and <code>img-fluid</code> classes we can target specific elements of this component.
       </p>
     </psk-chapter>
-    <psk-chapter title="psk-link">
+    <psk-chapter title="webc-link">
       <p>
         This component role is to create a link that will redirect the user on another page inside the website. In order to customize this component we have to take into account the html structure that is rendered.
       </p>
       <psk-code language="markup">
-        <div class=psk-link>
+        <div class=webc-link>
           <a class="btn btn-link">
           </a>
         </div>
       </psk-code>
       <p>
-        Using the <code>psk-link</code>, <code>btn</code> and <code>btn-link</code> classes, we can style this component as any other link or we can style it totally different.
+        Using the <code>webc-link</code>, <code>btn</code> and <code>btn-link</code> classes, we can style this component as any other link or we can style it totally different.
       </p>
     </psk-chapter>
     <psk-chapter title="psk-list">
