--- a/pages/cardinal/web-components-mvc.html
+++ b/pages/cardinal/web-components-mvc.html
@@ -19,14 +19,14 @@
 
     <psk-chapter title="Guide for the links bellow: ">
         <psk-list>
-            Models: <psk-link page="Cardinal/Models"> Describe how you create bindable models in Cardinal </psk-link>
-            Views: <psk-link page="Cardinal/Views"> Describe how you create views with HTML (Web Components) </psk-link>
-            Controllers: <psk-link page="Cardinal/Controllers"> Describe how you can create MVC controllers </psk-link>
-            Events: <psk-link page="Cardinal/Events"> Describe programming with Custom Events </psk-link>
-            Themes: <psk-link page="Cardinal/Themes"> Describe how you customise the themes </psk-link>
-            WebComponents: <psk-link page="Cardinal/web-components/app-root"> Describes the available (buildin) web components usable to create applications using Cardinal </psk-link>
-            Forms: <psk-link page="Cardinal/forms/using-forms"> Describes the available (buildin) web components usable in custom forms </psk-link>
-            PSK Wiki: <psk-link page="Cardinal/psk-wiki/psk-card"> Describe the web components usable to create a wiki like documentation site using Cardinal </psk-link>
+            Models: <webc-link tag="cardinal-models"> Describe how you create bindable models in Cardinal </webc-link>
+            Views: <webc-link tag="cardinal-views"> Describe how you create views with HTML (Web Components) </webc-link>
+            Controllers: <webc-link tag="cardinal-controllers"> Describe how you can create MVC controllers </webc-link>
+            Events: <webc-link tag="cardinal-events"> Describe programming with Custom Events </webc-link>
+            Themes: <webc-link tag="cardinal-themes"> Describe how you customise the themes </webc-link>
+            WebComponents: <webc-link tag="psk-app-root"> Describes the available (buildin) web components usable to create applications using Cardinal </webc-link>
+            Forms: <webc-link tag="cardinal-forms"> Describes the available (buildin) web components usable in custom forms </webc-link>
+            PSK Wiki: <webc-link tag="psk-card"> Describe the web components usable to create a wiki like documentation site using Cardinal </webc-link>
         </psk-list>
     </psk-chapter>
 
