--- a/pages/how-to/a-components-library-with-cardinal.html
+++ b/pages/how-to/a-components-library-with-cardinal.html
@@ -87,8 +87,8 @@
   </psk-chapter>
 
   <psk-chapter title="Installing dependencies">
-    The install script will make use of <psk-link tag="octopus">Octopus</psk-link> which will install the latest
-    <psk-link tag="cardinal-mvc">Cardinal</psk-link> version from its repository.
+    The install script will make use of <webc-link tag="octopus">Octopus</webc-link> which will install the latest
+    <webc-link tag="cardinal-web-components-mvc">Cardinal</webc-link> version from its repository.
     <psk-code language="bash"> npm install </psk-code>
   </psk-chapter>
 
@@ -128,16 +128,16 @@
 
   </psk-chapter>
 
-  <psk-chapter title="Existing Cardinal.Js components">
-    To learn about the existing Cardinal.Js components check
-    <psk-link tag="cheatsheet">Cardinal.Js documentation page</psk-link>
+  <psk-chapter title="Existing Cardinal.JS components">
+    To learn about the existing Cardinal.JS components check
+    <webc-link tag="webcardinal-cheatsheet">Cardinal.JS documentation page</webc-link>
   </psk-chapter>
 
-  <psk-chapter title="Update Cardinal.Js framework">
-    <p>
-      To update the instance of Cardinal.Js framework used, you must be within the cardinal-custom-components root folder and to execute
-      the command:
-    </p>
-    <psk-code language="bash"> npm run update </psk-code>
-  </psk-chapter>
+<!--  <psk-chapter title="Update Cardinal.JS framework">-->
+<!--    <p>-->
+<!--      To update the instance of Cardinal.JS framework used, you must be within the cardinal-custom-components root folder and to execute-->
+<!--      the command:-->
+<!--    </p>-->
+<!--    <psk-code language="bash">npm run update</psk-code>-->
+<!--  </psk-chapter>-->
 </psk-page>
