--- a/pages/how-to/a-documentation-site.html
+++ b/pages/how-to/a-documentation-site.html
@@ -125,32 +125,28 @@
 	</psk-chapter>
 
 	<psk-chapter title="Available tags">
-		<p>There are three categories of web components so far: <psk-link page="web-components">main web components</psk-link>,
-			<psk-link page="psk-wiki">documentation components</psk-link> and <psk-link page="forms">form components</psk-link>.
-		</p>
-
 		<psk-chapter title="Web Components">
 			<p>Every component can be used as long as it respects the recommendations of usage.</p>
 			<p>Check out each component documentation and examples to make an idea of how to use it.</p>
 			<psk-list>
-				<psk-link page="web-components/app-menu">App Menu</psk-link>
-				<psk-link page="web-components/app-router">App Router</psk-link>
-				<psk-link page="web-components/attachments-list">Attachments List</psk-link>
-				<psk-link page="web-components/container">Container</psk-link>
-				<psk-link page="web-components/feedback-list">Feedback List</psk-link>
-				<psk-link page="web-components/files-chooser">Files Chooser</psk-link>
-				<psk-link page="web-components/floating-menu">Floating Menu</psk-link>
-				<psk-link page="web-components/grid">Grid</psk-link>
-				<psk-link page="web-components/idon">Icon</psk-link>
-				<psk-link page="web-components/modal">Modal</psk-link>
-				<psk-link page="web-components/page-not-found">Page not found</psk-link>
-				<psk-link page="web-components/pin-popup">Pin popup</psk-link>
-				<psk-link page="web-components/psk-button">Button</psk-link>
-				<psk-link page="web-components/slideshow">Slideshow</psk-link>
-				<psk-link page="web-components/tolbar">Toolbar</psk-link>
-				<psk-link page="web-components/ui-loader">UI Loader</psk-link>
-				<psk-link page="web-components/user-profile">User Profile</psk-link>
-				<psk-link page="web-components/wizard">Wizard</psk-link>
+				<webc-link tag="psk-app-menu">App Menu</webc-link>
+				<webc-link tag="psk-app-router">App Router</webc-link>
+				<webc-link tag="psk-attachments-list">Attachments List</webc-link>
+				<webc-link tag="psk-container">Container</webc-link>
+				<webc-link tag="psk-feedback-list">Feedback List</webc-link>
+				<webc-link tag="psk-files-chooser">Files Chooser</webc-link>
+				<webc-link tag="psk-floating-menu">Floating Menu</webc-link>
+				<webc-link tag="psk-grid">Grid</webc-link>
+				<webc-link tag="psk-icon">Icon</webc-link>
+				<webc-link tag="psk-modal">Modal</webc-link>
+				<webc-link tag="psk-page-not-found">Page not found</webc-link>
+				<webc-link tag="psk-pin-popup">Pin popup</webc-link>
+				<webc-link tag="psk-psk-button">Button</webc-link>
+				<webc-link tag="psk-slideshow">Slideshow</webc-link>
+				<webc-link tag="psk-toolbar">Toolbar</webc-link>
+				<webc-link tag="psk-ui-loader">UI Loader</webc-link>
+				<webc-link tag="psk-user-profile">User Profile</webc-link>
+				<webc-link tag="psk-izard">Wizard</webc-link>
 			</psk-list>
 		</psk-chapter>
 
@@ -159,23 +155,23 @@
 				with the correct combination. E.g.: You can add somewhere in a page a psk-text-input to filter the information from
 				a table.</p>
 			<p>Check out each component documentation and examples to make an idea of how to use it.</p>
-			<p>Also, check the documentation for <psk-link page='forms/using-forms'>How to use Forms</psk-link> in order to properly
-				combine the components and to handle the user input informations.</p>
+			<p>Also, check the documentation for <webc-link tag='cardinal-forms'>How to use Forms</webc-link> in order to properly
+				combine the components and to handle the user input information.</p>
 			<psk-list>
-				<psk-link page='forms/psk-checkbox'>PSK checkbox</psk-link>
-				<psk-link page='forms/psk-date-input'>PSK date input</psk-link>
-				<psk-link page='forms/psk-email-input'>PSK email input</psk-link>
-				<psk-link page='forms/psk-for-each'>PSK for each</psk-link>
-				<psk-link page='forms/psk-fom-row'>PSK form row</psk-link>
-				<psk-link page='forms/psk-form'>PSK form</psk-link>
-				<psk-link page='forms/psk-input'>PSK input</psk-link>
-				<psk-link page='forms/psk-label'>PSK label</psk-link>
-				<psk-link page='forms/psk-number-input'>PSK number input</psk-link>
-				<psk-link page='forms/psk-password-input'>PSK password input</psk-link>
-				<psk-link page='forms/psk-radio'>PSK radio</psk-link>
-				<psk-link page='forms/psk-radio-group'>PSK radio group</psk-link>
-				<psk-link page='forms/psk-select'>PSK select</psk-link>
-				<psk-link page='forms/psk-text-input'>PSK text input</psk-link>
+				<webc-link tag='psk-checkbox'>PSK checkbox</webc-link>
+				<webc-link tag='psk-date-input'>PSK date input</webc-link>
+				<webc-link tag='psk-email-input'>PSK email input</webc-link>
+				<webc-link tag='psk-for-each'>PSK for each</webc-link>
+				<webc-link tag='psk-fom-row'>PSK form row</webc-link>
+				<webc-link tag='psk-form'>PSK form</webc-link>
+				<webc-link tag='psk-input'>PSK input</webc-link>
+				<webc-link tag='psk-label'>PSK label</webc-link>
+				<webc-link tag='psk-number-input'>PSK number input</webc-link>
+				<webc-link tag='psk-password-input'>PSK password input</webc-link>
+				<webc-link tag='psk-radio'>PSK radio</webc-link>
+				<webc-link tag='psk-radio-group'>PSK radio group</webc-link>
+				<webc-link tag='psk-select'>PSK select</webc-link>
+				<webc-link tag='psk-text-input'>PSK text input</webc-link>
 			</psk-list>
 		</psk-chapter>
 
@@ -183,18 +179,18 @@
 			<p>Documentation of the components can be found in the PSK Wiki section. They are used to create pages like this.</p>
 			<p>Check out each component documentation and examples to see how to use it.</p>
 			<psk-list>
-				<psk-link page='psk-wiki/psk-card'>PSK card</psk-link>
-				<psk-link page='psk-wiki/psk-chapter'>PSK chapter</psk-link>
-				<psk-link page='psk-wiki/psk-code'>PSK code</psk-link>
-				<psk-link page='psk-wiki/psk-copy-to-clipboard'>PSK copy to clipboard</psk-link>
-				<psk-link page='psk-wiki/psk-description'>PSK description</psk-link>
-				<psk-link page='psk-wiki/psk-example'>PSK example</psk-link>
-				<psk-link page='psk-wiki/psk-img'>PSK img</psk-link>
-				<psk-link page='psk-wiki/psk-link'>PSK link</psk-link>
-				<psk-link page='psk-wiki/psk-list'>PSK list</psk-link>
-				<psk-link page='psk-wiki/psk-page'>PSK page</psk-link> - This component is the root of every page, so it is mandatory.
-				<psk-link page='psk-wiki/psk-table'>PSK table</psk-link>
-				<psk-link page='psk-wiki/psk-toc'>PSK toc</psk-link>
+				<webc-link tag='psk-card'>PSK card</webc-link>
+				<webc-link tag='psk-chapter'>PSK chapter</webc-link>
+				<webc-link tag='psk-code'>PSK code</webc-link>
+				<webc-link tag='psk-copy-to-clipboard'>PSK copy to clipboard</webc-link>
+				<webc-link tag='psk-description'>PSK description</webc-link>
+				<webc-link tag='psk-example'>PSK example</webc-link>
+				<webc-link tag='psk-img'>PSK img</webc-link>
+				<webc-link tag='webc-link'>PSK link</webc-link>
+				<webc-link tag='psk-list'>PSK list</webc-link>
+				<webc-link tag='psk-page'>PSK page</webc-link> - This component is the root of every page, so it is mandatory.
+				<webc-link tag='psk-table'>PSK table</webc-link>
+				<webc-link tag='psk-toc'>PSK toc</webc-link>
 			</psk-list>
 		</psk-chapter>
 	</psk-chapter>
