--- a/pages/how-to/a-site-with-cardinal.html
+++ b/pages/how-to/a-site-with-cardinal.html
@@ -57,7 +57,7 @@
 	</psk-chapter>
 
 	<psk-chapter title="Installing dependencies">
-		The install script will make use of <psk-link tag="octopus">Octopus</psk-link> which will install the latest <psk-link tag="cardinal-mvc">Cardinal</psk-link> version and the <psk-link tag="themes">app theme</psk-link> from their repositories.
+		The install script will make use of <webc-link tag="octopus">Octopus</webc-link> which will install the latest <webc-link tag="cardinal-mvc">Cardinal</webc-link> version and the <webc-link tag="themes">app theme</webc-link> from their repositories.
 		<psk-code language="bash">
 			npm install
 		</psk-code>
@@ -146,6 +146,6 @@
 		</psk-list>
 	</psk-chapter>
 	<psk-chapter title="Develop the website">
-		To learn how to develop the website more check <psk-link tag="cardinal-mvc">Cardinal.Js documentation page</psk-link>
+		To learn how to develop the website more check <webc-link tag="cardinal-web-components-mvc">Cardinal.Js documentation page</webc-link>
 	</psk-chapter>
 </psk-page>
