--- a/pages/how-to/a-web-site-with-swarms.html
+++ b/pages/how-to/a-web-site-with-swarms.html
@@ -26,7 +26,7 @@
     </psk-highlight>
     <psk-chapter title="Prerequisites">
         First we recommend to read and follow the information found on
-        <psk-link page="quick start/installation">Setup page</psk-link>
+        <webc-link href="/quick-start/installation">Setup page</webc-link>
     </psk-chapter>
     <psk-chapter title="Add new functionality to a PSK Node">
         <psk-description>
