--- a/pages/index.html
+++ b/pages/index.html
@@ -28,12 +28,12 @@
         caption="PrivateSky Platform: Cloud Backends, Serverless, Integration Flows, Executable Choreographies, Hierarchical  Blockchains, Self Sovereign Applications as DApps "
 >
 
-    <psk-button class="big-button">
-        <psk-link class="link-button" tag="why">Why?</psk-link>
-    </psk-button>
+    <webc-link tag="overview-why">
+        <psk-button class="big-button">Why?</psk-button>
+    </webc-link>
 
-    <psk-button class="big-button">
-        <psk-link class="link-button" tag="open-source">Open Source?</psk-link>
-    </psk-button>
+    <webc-link tag="about">
+        <psk-button class="big-button">Open Source?</psk-button>
+    </webc-link>
 
 </psk-slideshow>
