--- a/pages/overview/main-innovations.html
+++ b/pages/overview/main-innovations.html
@@ -18,45 +18,43 @@
   <psk-chapter title="Swarm Communication Research">
 
     <psk-chapter title="Exploration of the swarm communication and verifiable choreographies">
-      <psk-link page="Overview/swarms-explained">Swarm communication explained </psk-link>
+      <webc-link tag="overview-swarms-explained">Swarm communication explained</webc-link>
     </psk-chapter>
 
     <psk-chapter title="Encrypted Choregraphies security model">
       Under the concept of "Encrypted Choregraphies" we propose a general model for handling cryptography primitives in swarms in general.
-      <psk-link page="Development/encrypted-choreographies">Description of the Encrypted Choregraphies </psk-link>
+<!--      <webc-link>Description of the Encrypted Choregraphies</webc-link>-->
     </psk-chapter>
 
     <psk-chapter title="Serverless Choregraphies ">
       Under the concept of "Serverless Choregraphies" we propose a general model for running executable choreographies in a "choreography as a service" model.
       We use this model also fo execution of the blockchain transactions.
-      <psk-link page="Development/encrypted-choreographies">Description of the Serverless Choregraphies </psk-link>
+<!--      <webc-link>Description of the Serverless Choregraphies</webc-link>-->
     </psk-chapter>
 
   </psk-chapter>
 
 
   <psk-chapter title="Hierarchical Blockchains Architectures">
-      A short presentation of blockchain architectures proposed by PrivateSky can be found here:  <psk-link page="Overview/Architecture" > Architecture for Blockchain</psk-link>
+      A short presentation of blockchain architectures proposed by PrivateSky can be found here: <webc-link tag="overview-architecture">Architecture for Blockchain</webc-link>
 
-      <psk-chapter title="Asset & Transactions based Smart Contracts">
-        Documentation about the assets/transactions model is described  <psk-link page="Overview/transactions" > here</psk-link>
-      </psk-chapter>
+<!--      <psk-chapter title="Asset & Transactions based Smart Contracts">-->
+<!--        Documentation about the assets/transactions model is described <webc-link>here</webc-link>-->
+<!--      </psk-chapter>-->
 
+<!--      <psk-chapter title="OBFT consensus algorithm">-->
+<!--        OBFT consensus algorithm will be described <webc-link>here</webc-link>.-->
+<!--      </psk-chapter>-->
 
-      <psk-chapter title="OBFT consensus algorithm">
-        OBFT consensus algorithm will be described <psk-link page="Overview/obft" > here</psk-link>.
-      </psk-chapter>
-
-
-      <psk-chapter title="Anchored consensus algorithm">
-        Anchored consensus algorithm will be described OBFT consensus algorithm will be described <psk-link page="Overview/csb consensus" > here</psk-link>.
-      </psk-chapter>
+<!--      <psk-chapter title="Anchored consensus algorithm">-->
+<!--        Anchored consensus algorithm will be described OBFT consensus algorithm will be described <webc-link>here</webc-link>.-->
+<!--      </psk-chapter>-->
     </psk-chapter>
 
   <psk-chapter title="EDFS subproject">
       PrivateSky efforts to offer to create a database for storing private data conducted us to propose the  EDFS (Encrypted Distributed File System) that is both a file system and a blockchain based distributed database.
     The main purpose of EDFS is to serve as near-chain (off-chain) storage for blockchains.
-     To properly understand EDFS capabilities we need to understand 4 concepts:  BAR archives,CSBs, Secret Smart Contracts, Self-Sovereign Applications.
+     To properly understand EDFS capabilities we need to understand 4 concepts: BAR archives, CSBs, Secret Smart Contracts, Self-Sovereign Applications.
     Our preliminary work on Self-Sovereignithy was published in two articles <i>“Private Data System enabling Self-Sovereign Storage managed by Executable Choreographies”</i>, DAIS 2017 - 17th IFIP International Conference on Distributed Applications and Interoperable Systems, Neuchâtel, Switzerland, June 2017 and
     <i>"Towards a smart society through personal assistants employing executable choreographies"</i>, ISD 2017, 6-8 Sep 2017 26th International Conference on Information Systems Development We are working to write an publish a new scientific articles on the concept of Self-Sovereign Applications. A short presentation of the concept can be found here:
 
@@ -110,8 +108,8 @@
   </psk-chapter>
 
 
-  <psk-chapter title="CardinalJs subproject">
-    CardinalJs appeared as a method of programming the UI of the Self Sovereign Applications. Details can be found <psk-link page="Cardinal/web-components-mvc">here </psk-link>
+  <psk-chapter title="CardinalJS subproject">
+    CardinalJS appeared as a method of programming the UI of the Self Sovereign Applications. Details can be found <webc-link tag="cardinal-web-components-mvc">here</webc-link>
   </psk-chapter>
 
 
@@ -125,7 +123,7 @@
     and creation of performant methods of storing and handling private and confidential data.
     An important concern for PrivateSky is to create technologies that enable privacy and confidentiality by default. For a quick understanding of the swarm communication set
     we suggest our other articles.
-    <psk-link page="Overview/swarms-explained"> Swarm communication explained</psk-link>
+    <webc-link tag="overview-swarms-explained"> Swarm communication explained</webc-link>
     Links to the descriptions of the major PrivateSky innovation and resources for developers can be found bellow.
   </psk-chapter>
 
