--- a/pages/overview/swarms-explained.html
+++ b/pages/overview/swarms-explained.html
@@ -80,7 +80,7 @@ their character as processes and refining them in order to achieve conceptual un
 
   <p align="justify">The above picture summarizes the 4 major benefits of swarm communication:</p>
   <ul>
-    <li align="justify"> <b>Simplification of code through accurate abstractization.</b> </li>
+    <li align="justify"> <b>Simplification of code through accurate abstraction.</b> </li>
      <p align="justify"> Swarm communication enables the generation of a single concept out of the individual communication lines towards the actors (objects) involved in a process. Swarm communications translates the processes’ behaviours into explicit descriptions observable at a single location. The picture down below visually exemplifies how from a complex communication between 3 actors we may extract a swarm description hiding the non-essential details for the whole image of the system. </p>
 
     <psk-img title="Swarm Description and set of bees with shared identity as instances" src="/assets/images/newlook/SwarmDescription2.png"></psk-img>
@@ -153,7 +153,7 @@ Smart contract | Blockchain based  long living processes | In PrivateSky, a smar
       swarm| A swarm instance has a collective identity. A swarm (or a choreography) is built out of swarm objects instances | The objects included in the collective identity will be located on different network nodes. As such, the location is a critical concept for a swarm. The location is similar to the security context of an agent.
       workflow| The identity of a workflow is important (cryptographically generated UID) | A workflow swarm may be instantiated in different locations in time and space.
       asset| cryptographically generated UID | An asset instance is located in the blockchain where the asset is included.
-      transaction| Theidentity of a transaction swarm instance  is a cryptographically generated UID | During validation, the transaction is usually instantiated in all the nodes participating in consensus. Furthermore,the transaction is assigned a location in the blockchain history.
+      transaction| The identity of a transaction swarm instance  is a cryptographically generated UID | During validation, the transaction is usually instantiated in all the nodes participating in consensus. Furthermore,the transaction is assigned a location in the blockchain history.
       Embedded object| The identity of an instance is strictly linked to the identity of another “global” swarm | The location of an embedded swarm is strictly linked to the location of the “global” swarm.
     </psk-table>
 
