--- a/pages/overview/why.html
+++ b/pages/overview/why.html
@@ -21,7 +21,7 @@
         On the one hand  companies and startups have budgetary constraints and  internal organizational complexity that typically prevents the existence of a sufficient number of
         iterations (many partial failures and endurance to swim against the current technological fashion for decades).
         Our team has worked hard to explore the concept of swarm communication and choreography for almost 10 years.
-        We were lucky, because  universities typicaly do not have programmers and architects with enough industry experience to explore such practical directions.
+        We were lucky, because  universities typically do not have programmers and architects with enough industry experience to explore such practical directions.
         While many groups are trying to create alternatives to Object Oriented Programming we took the harder way of trying to improve its core.
         We have not finished our work, we are continuing our efforts to simplify, apply  and present the swarm communication concept in new and better ways.
         PrivateSky is a good exercise but we are confident because  the core idea of swarm communications enabled powerful results.
@@ -41,14 +41,14 @@
         <p>In the years since we worked on SwarmESB and PrivateSky projects, we have iterated new ideas that sometimes went away from current fashion and why it was considered "best practice".
             Changing your point of view and habits is difficult and only in retrospect can you see how obvious some ideas are. We are trying to guess which direction should be developed in relation
             to the current state of programming science. Although we were often disappointed with object-oriented programming (OOP), we have long looked at ways to reuse the huge experience
-            of this programming model. We don't think the industry needs programming languages ​​or frameworks that can only be used by geniuses who have been studying complex mathematical concepts for years.
+            of this programming model. We don't think the industry needs programming languages or frameworks that can only be used by geniuses who have been studying complex mathematical concepts for years.
             Rather, we believe that we should have tools that offered the possibility to program as close to the essential complexity of the problem (the tools should not add artificial complexity). </p>
     </psk-chapter>
 
-    <psk-chapter  title="Innovations">
+    <psk-chapter title="Innovations">
         It happened that our research and development effort leaded us to build the PrivateSky programming platform.
         PrivateSky offer new approaches for building  Blockchain Platform, MicroServices based cloud backends, Complex Integration Projects, Composition of services using Executable Choreographies.
-        In the blockchain area we propose the concept of Hierahical Blockchain Domains, Self Sovereign Applications to improve the DApps concept.
-        To see all our results, please check our page <psk-link page="overview/main innovations" >Presenting PrivateSky Innovations</psk-link>.
+        In the blockchain area we propose the concept of Hierarchical Blockchain Domains, Self Sovereign Applications to improve the DApps concept.
+        To see all our results, please check our page <webc-link tag="overview-main-innovations">Presenting PrivateSky Innovations</webc-link>.
     </psk-chapter>
 </psk-page>
