--- a/pages/start/installation.html
+++ b/pages/start/installation.html
@@ -106,7 +106,7 @@
         npm install
       </psk-code>
       <br />
-      <code>npm install</code> will install <psk-link page="tools/octopus">octopus</psk-link> that will handle and clone
+      <code>npm install</code> will install <webc-link tag="octopus">octopus</webc-link> that will handle and clone
       all modules from git, similar behaiviour as in a project with submodules.
     </psk-chapter>
 
