--- a/pages/tools/pskwallet.html
+++ b/pages/tools/pskwallet.html
@@ -16,13 +16,13 @@
     <psk-toc title="In this section"></psk-toc>
 
     <psk-highlight type-of-highlight="note">
-        <code><b>Pskwallet</b></code> is a command line tool for creating and manipulating <psk-link page="apis/edfs/dossiers">dossiers</psk-link>.
+        <code><b>Pskwallet</b></code> is a command line tool for creating and manipulating <webc-link href="/api/edfs/dossiers">dossiers</webc-link>.
     </psk-highlight>
 
     <psk-chapter title="create dossier">
         <psk-highlight type-of-highlight="note">
-            The <code>create dossier</code> command creates a <psk-link page="apis/edfs/dossiers">dossier</psk-link> with the provided name and prints its
-            <psk-link page="apis/classes/seed">SEED</psk-link>.
+            The <code>create dossier</code> command creates a <webc-link href="/api/edfs/dossiers">dossier</webc-link> with the provided name and prints its
+            <webc-link href="/api/classes/seed">SEED</webc-link>.
         </psk-highlight>
 
         <psk-card title="Syntax">
@@ -33,7 +33,7 @@
             <psk-card title="Parameters">
                 <psk-list type="unordered">
                     <code>dossierName</code>
-                        The name of the <psk-link page="apis/edfs/dossiers">DSU</psk-link> that is being created.<br><br>
+                        The name of the <webc-link href="/api/edfs/dossiers">DSU</webc-link> that is being created.<br><br>
                     <code>constitutionPath</code>
                         The file system path where the bundles that form the DSU's constitution are located. When the <code>create DSU</code>
                         command is executed, the files located at <code>constitutionPath</code> are added to the created DSU.<br><br>
