--- a/pages/cardinal/views.html
+++ b/pages/cardinal/views.html
@@ -18,15 +18,15 @@
     <psk-description title="Summary & Definition">
         <p>Table of contents, we will explain what is a view, how to write a view and how to bind it to a model for a controlled section of the page.</p>
         <p>A controlled section inside a page can be a
-            <psk-link tag='psk-form'>psk-form</psk-link> or a set of components wrapped inside a
-            <psk-link tag='psk-container'>psk-container</psk-link>.</p>
+            <webc-link tag='psk-form'>psk-form</webc-link> or a set of components wrapped inside a
+            <webc-link tag='psk-container'>psk-container</webc-link>.</p>
         <psk-chapter title="What is a view?">
             <p>A view, for Cardinal.Js framework, is a set of Web Components or HTML elements that will be displayed in the browser.</p>
             <p>A view can accept one or more models, deppending on the needs. Informations about what is a model, how can be defined and how to bind it to a view cand be found here:
-                <psk-link page="cardinal/models"><i>MODELS</i></psk-link>
+                <webc-link tag="cardinal-models"><i>MODELS</i></webc-link>
             </p>
             <p>For now, each model can be defined inside a controller as in the examples found at the page
-                <psk-link tag='using-forms'>Using Forms</psk-link>.</p>
+                <webc-link tag='cardinal-forms'>Using Forms</webc-link>.</p>
             <p>One of the most important feature that a view-model can provide is the support for internationalization and localization, a feature we target with our implementation.</p>
         </psk-chapter>
     </psk-description>
@@ -35,7 +35,7 @@
         <p>A view can be written only insde a HTML file, so here are two possible ways to do so:</p>
         <psk-list>
             <span>Edit an existing HTML page</span>
-            <span>Create a new HTML page by following the guidelines from this page: <psk-link tag="documentation-site">How to write a page</psk-link></span>
+            <span>Create a new HTML page by following the guidelines from this page: <webc-link tag="documentation-site">How to write a page</webc-link></span>
         </psk-list>
     </psk-chapter>
 
